<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="#009944"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/setting"
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:gravity="center"
            android:onClick="setting"
            android:text="@string/setting"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_weight="10"
            android:gravity="center|bottom"
            android:text="@string/top_title"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:gravity="center"
            android:textSize="20sp"
            android:visibility="invisible" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_fragment_tab"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_fragment_music"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/fragment_music"
            android:textSize="20sp"
            android:background="#00FF00"/>
        <TextView
            android:id="@+id/tv_fragment_artist"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/fragment_artist"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_fragment_album"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/fragment_album"
            android:textSize="20sp"/>
        <TextView
            android:id="@+id/tv_fragment_webview"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center"
            android:text="@string/fragment_webview"
            android:textSize="20sp"/>
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:background="@mipmap/background"
        android:layout_weight="1"
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:flipInterval="30"
        android:persistentDrawingCache="animation"/>

    <LinearLayout
        android:id="@+id/ll_buttom"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:onClick="onClick"
        android:orientation="horizontal" >

        <ImageView
            android:layout_weight="1"
            android:id="@+id/music_album"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:src="@mipmap/album" />

        <LinearLayout
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/music_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxEms="10"
                android:singleLine="true"
                android:text="@string/music_title" />

            <TextView
                android:id="@+id/music_artist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxEms="10"
                android:singleLine="true"
                android:text="@string/music_artist" />
        </LinearLayout>
        <LinearLayout
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center" >

            <Button
                android:id="@+id/back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@mipmap/widget_pre_button_pressed" />

            <Button
                android:id="@+id/play_pause"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@mipmap/play_button" />

            <Button
                android:id="@+id/next"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@mipmap/widget_next_button_pressed" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>